2016-04-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genFarPointerSet): no inline variable definitions
	* src/ds390/main.c (_ds390_genAssemblerPreamble, _ds390_genIVT): add MCON,
	  (_ds390_genXINIT): added _ds390_genXRAMCLEAR

2016-04-25 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	* src/SDCCsymt.c
	* src/SDCCsymt.h
	  Check local defined structs more strictly.

2016-04-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c
	  Change the signess of the literal operand in bitwise operation.
	* support/regression/tests/bug-1929.c
	  Add a new test case.
	* support/regression/tests/gcc-torture-execute-20020506-1.c
	  Modify test case.

2016-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/sdbinutils/bfd/doc/Makefile.am,
	  support/sdbinutils/bfd/doc/Makefile.in,
	  support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in:
	  Revert changes of wrong bugfix.

2016-04-20 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/peeph-r2k.def
	* src/z80/peeph-tlcs90.def
	* src/z80/peeph-z80.def
	  Fix potential bugs.

2016-04-19 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/sdbinutils/bfd/doc/Makefile.am,
	  support/sdbinutils/bfd/doc/Makefile.in,
	  support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in:
	  Fix a distclean bug. Now the "make distclean" command deletes
	  these unnecessary files:
	    support/sdbinutils/bfd/doc/bfd.info*
	    support/sdbinutils/binutils/arlex.c
	    support/sdbinutils/binutils/arparse.c
	    support/sdbinutils/binutils/arparse.h
	    support/sdbinutils/binutils/defparse.c
	    support/sdbinutils/binutils/defparse.h
	    support/sdbinutils/binutils/mcparse.c
	    support/sdbinutils/binutils/mcparse.h
	    support/sdbinutils/binutils/rcparse.c
	    support/sdbinutils/binutils/rcparse.h
	    support/sdbinutils/binutils/sysinfo.c
	    support/sdbinutils/binutils/sysinfo.h
	    support/sdbinutils/binutils/syslex.c
